--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2627,9 +2627,9 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
-    background: -webkit-linear-gradient(left, #8dd242 0%, #ADE86D 100%);
-    background: -o-linear-gradient(left, #8dd242 0%, #ADE86D 100%);
-    background: linear-gradient(to right, #8dd242 0%, #ADE86D 100%);
+    background: -webkit-linear-gradient(left, #8dd242 0%, #516e3b 100%);
+    background: -o-linear-gradient(left, #8dd242 0%, #516e3b 100%);
+    background: linear-gradient(to right, #8dd242 0%, #516e3b 100%);
     z-index: -1;
     opacity: 0;
     -webkit-transition: all 0.3s ease-out 0s;
